fix tests compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
             -Wno-ctad-maybe-unsupported
             -Wno-unknown-pragmas
             -Wno-c++20-extensions
+            -Wno-switch-default
             -Werror)
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
     set(icc-compile-options -Wall -Wextra -Werror -Wno-unknown-pragmas)
