--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@hey-api/openapi-ts": "^0.53.2",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.1",
@@ -41,6 +42,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@hey-api/client-fetch": "^0.3.1",
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"colord": "^2.9.3",
