--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           git status --porcelain | xargs -I {} -0 test -z \"{}\"
 
   msvc:
-    runs-on: windows-latest
+    runs-on: [ self-hosted, windows, x64 ]
 
     strategy:
       fail-fast: false
