--- a/ui/package.json
+++ b/ui/package.json
@@ -51,6 +51,7 @@
 		"polyline": "^0.2.0",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"geojson": "^0.5.0"
 	}
 }
