--- a/ui/.eslintignore
+++ b/ui/.eslintignore
@@ -11,3 +11,9 @@ node_modules
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+# Generated code
+src/lib/openapi
+
+# shadcn-svelte
+src/lib/components
