--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ if (NOT DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
     endif ()
 endif ()
 
+set(REFLECTCPP_YAML ON)
+
 include(cmake/buildcache.cmake)
 include(cmake/pkg.cmake)
 
@@ -76,7 +78,7 @@ file(GLOB_RECURSE motis-files src/*.cc)
 add_library(motis ${motis-files})
 target_include_directories(motis PUBLIC include)
 target_compile_features(motis PUBLIC cxx_std_23)
-target_link_libraries(motis nigiri osr boost-json adr motis-api)
+target_link_libraries(motis nigiri osr boost-json adr motis-api reflectcpp)
 
 # --- ADR EXTEND ---
 add_executable(motis-adr-extend exe/adr_extend.cc)
